--- a/styles.css
+++ b/styles.css
@@ -778,7 +778,7 @@ padding-bottom: 100px;
  .chat-body {
     display: flex;
     justify-content: center;
-    background-image: linear-gradient(
+   /*  background-image: linear-gradient(
       23deg,
       hsl(49deg 100% 69%) 0%,
       hsl(16deg 80% 61%) 2%,
@@ -787,7 +787,7 @@ padding-bottom: 100px;
       hsl(212deg 100% 25%) 88%,
       hsl(197deg 100% 30%) 98%,
       hsl(183deg 79% 36%) 100%
-    );
+    ); */
     height: 100vh;
   }
   
