--- a/styles.css
+++ b/styles.css
@@ -777,6 +777,7 @@ padding-bottom: 100px;
  
  .chat-body {
     display: flex;
+    background-color: black;
     justify-content: center;
    /*  background-image: linear-gradient(
       23deg,
