--- a/styles.css
+++ b/styles.css
@@ -771,7 +771,11 @@ padding-bottom: 100px;
 
 
 
- .chat-wrapper{
+
+
+
+
+.chat-wrapper{
     width: 70%vw;
  } 
  
@@ -794,6 +798,7 @@ padding-bottom: 100px;
 
   .chat-header{
     color: yellow;
+    text-decoration: none;
   }
   
   .button {
