--- a/styles.css
+++ b/styles.css
@@ -827,7 +827,7 @@ padding-bottom: 100px;
   .person-selector-button {
     width: 100%;
     background-color: #15202b;
-    color: #fff;
+    color: #ffffff;
     font-size: 1.1em;
   }
   
@@ -848,8 +848,7 @@ padding-bottom: 100px;
   }
   
   .chat-header {
-    margin-bottom: 1em;
-    color: #fff;
+    margin-bottom: 1em;;
   }
   
   .chat-header h2 {
