--- a/styles.css
+++ b/styles.css
@@ -806,7 +806,7 @@ padding-bottom: 100px;
 .button {
     border: none;
     padding: 0.625em;
-    border-radius: 0.5em;
+/*     border-radius: 0.5em; */
     cursor: pointer;
     font-family:Arvo;
 }
