--- a/styles.css
+++ b/styles.css
@@ -835,7 +835,7 @@ padding-bottom: 100px;
 }
   
 .active-person {
-    background: #15202b;
+    background: #15202b00;
     color: yellow;
     font-family:Arvo;
 
