--- a/styles.css
+++ b/styles.css
@@ -886,6 +886,7 @@ padding-bottom: 100px;
   
 .message-text {
     font-size: 1em;
+    font-family: Arvo;
     margin-bottom: 0.31em;
     word-wrap: break-word;
 }
