--- a/styles.css
+++ b/styles.css
@@ -726,6 +726,10 @@ padding-top: 100px;
 .list-item{
     font-size: 12px;
 }
+
+.footer{
+    margin-top: 0;
+}
 .footer-copyright{
     display: flex;
     justify-content: center;
@@ -747,7 +751,7 @@ padding-bottom: 10px;
 .footer-div{
 display: flex;
 justify-content: center;
-padding-top: 90px;
+padding-top: 90px; 
 padding-bottom: 100px;
 }
 
