--- a/styles.css
+++ b/styles.css
@@ -1001,12 +1001,20 @@ padding-bottom: 100px;
 
 .grid{
 background-color: var(--clr-bg);
+max-width: 50vw;
 }
 
+
+
+
+
+.model-body{
+    background-color: var(--clr-bg);
+}
 .grid-wrapper{
     display: grid;
 }
-.grid-item1{
+.grid-item2{
     grid-column-start: 1;
     grid-column-end: 3;
 }
@@ -1014,3 +1022,4 @@ background-color: var(--clr-bg);
 .grid-img1{
     max-width: 10vw;
 }
+
