--- a/styles.css
+++ b/styles.css
@@ -748,9 +748,13 @@ padding-top: 100px;
     font-size: 12px;
 }
 
-.footer{
+.footer-wrap{
     margin-top: 0;
+    display: flex;
+   text-align: center;
+   flex-direction: column;
 }
+
 .footer-copyright{
     display: flex;
     justify-content: center;
@@ -758,6 +762,8 @@ padding-top: 100px;
     font-family: Arvo;
     border-top: 2px solid var(--clr-text);
     padding-top: 20px;
+    max-width: 59.6%;
+
 }
 
 .footer-main{
