--- a/styles.css
+++ b/styles.css
@@ -753,6 +753,7 @@ padding-top: 100px;
     display: flex;
    text-align: center;
    flex-direction: column;
+   align-items: center;
 }
 
 .footer-copyright{
@@ -762,7 +763,7 @@ padding-top: 100px;
     font-family: Arvo;
     border-top: 2px solid var(--clr-text);
     padding-top: 20px;
-    max-width: 59.6%;
+    width: 59.6%;
 
 }
 
