--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,11 @@
 *{
     list-style: none;
     text-decoration: none;
+
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    
 }
 .title{
     font-family: Silkscreen;
@@ -781,7 +786,11 @@ color: var(--clr-text);
 line-height: 65%;
 padding-bottom: 10px;
 }
-
+.footer-joi{
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+}
 .footer-div{
 display: flex;
 justify-content: center;
