--- a/styles.css
+++ b/styles.css
@@ -744,6 +744,7 @@ padding-top: 100px;
 .footer{
     background-color: var(--clr-bg);
     font-family: Arvo;
+    margin: 0;
 }
 
 .list-header{
@@ -769,6 +770,7 @@ padding-top: 100px;
     border-top: 2px solid var(--clr-text);
     padding-top: 20px;
     width: 59.6%;
+    margin: 0;
 
 }
 
@@ -796,8 +798,17 @@ display: flex;
 justify-content: center;
 padding-top: 90px; 
 padding-bottom: 100px;
+margin: 0;
 }
 
+
+.footer-list-item1{
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    text-align: start;
+    /* width: 200px; */
+}
 .footer-wrapper{
     display: flex;
     margin-left: 60px;
