--- a/styles.css
+++ b/styles.css
@@ -793,6 +793,10 @@ padding-bottom: 10px;
     justify-content: flex-start;
     flex-direction: column;
 }
+
+.footer-main-para{
+    font-size: 12px;
+}
 .footer-div{
 display: flex;
 justify-content: center;
