--- a/styles.css
+++ b/styles.css
@@ -797,12 +797,17 @@ padding-bottom: 10px;
 .footer-main-para{
     font-size: 12px;
 }
+
 .footer-div{
 display: flex;
 justify-content: center;
 padding-top: 90px; 
 padding-bottom: 100px;
 margin: 0;
+margin-top: 0;
+/* text-align: center;  */
+flex-direction: column;
+align-items: center;
 }
 
 
