--- a/styles.css
+++ b/styles.css
@@ -657,6 +657,7 @@ padding-bottom: 100px;
     font-family: Arvo;
     font-weight: 200;
     font-size: 15px;
+    margin: 0;
 }
 
 /* .cursor{
@@ -807,7 +808,7 @@ margin: 0;
 margin-top: 0;
 /* text-align: center;  */
 flex-direction: column;
-align-items: center;
+
 }
 
 
