--- a/styles.css
+++ b/styles.css
@@ -807,7 +807,7 @@ padding-bottom: 100px;
 margin: 0;
 margin-top: 0;
 /* text-align: center;  */
-flex-direction: column;
+flex-direction: row;
 
 }
 
