--- a/styles.css
+++ b/styles.css
@@ -810,6 +810,25 @@ flex-direction: row;
 
 }
 
+.footer-div-special{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    padding-top: 90px; 
+    padding-bottom: 100px;
+    margin: 0;
+    margin-top: 0;
+    /* text-align: center;  */
+    flex-direction: row;
+    
+}
+
+.last-footer-div{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
 
 .footer-list-item1{
     display: flex;
