--- a/styles.css
+++ b/styles.css
@@ -829,6 +829,13 @@ flex-direction: row;
     flex-direction: column;
 }
 
+.footer-about{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    align-content: flex-end;
+    flex-direction: column;
+}
 
 .footer-list-item1{
     display: flex;
