--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,12 @@ background-color:  var(--clr-bg) /* #f1a689 */;
     --clr-bg:yellow;
     --clr-mark:  #77f3e0;
     --radio-color: red;
-
+    --card_width: 250px;
+    --row_increment: 10px;
+    --card_border_radius: 16px;
+    --card_small: 26;
+    --card_med: 33;
+    --card_large: 45;
 }
 
 p,h1{
