--- a/styles.css
+++ b/styles.css
@@ -1113,6 +1113,21 @@ max-width: 50vw;
 }
 
 
+.pin_container {
+    margin: 0;
+    padding: 0;
+    width: 80vw;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+   display: grid;
+    grid-template-columns: repeat(auto-fill, var(--card_width));
+    grid-auto-rows: var(--row_increment);
+    justify-content: center;
+   background-color: black;
+   }
+
+
 
 
 
