--- a/styles.css
+++ b/styles.css
@@ -135,8 +135,18 @@ label input{
  justify-content: center;
  gap: 5px;
  background-color: rgba(255, 255, 0, 0);
+ /* color: var(--clr-text);
+ font-family: Arvo;
+ font-size: 12px;
+ font-weight: bold;
+ border: 3px solid var(--clr-text);
+ padding: 10px 20px;
+ text-decoration: none;
+ display: inline-block; */
+ /* position: relative; */
  margin-left: 130px;
-/*  margin-right: 130px; */
+ margin-right: 130px;
+/*  margin-top: 120px;  */
 
 }
 
@@ -344,6 +354,13 @@ input{
 .div-wrap{
     display: flex;
     align-items: center;
+}
+.wrapper11{
+display: flex;
+}
+
+.wrapper22{
+    display: flex;
 }
 
 .header-main{
@@ -579,16 +596,6 @@ padding-bottom: 100px;
     font-weight: 200;
     margin-left: 10px;
     line-height: 150%;
-}
-
-.wrapper11{
-    display: flex;
-    }
-    
-.wrapper22{
-        display: flex;
-        justify-content: space-between;
-        width: 100px;
 }
 
 .png1{
