--- a/styles.css
+++ b/styles.css
@@ -1136,12 +1136,18 @@ max-width: 50vw;
     background-color: red;
 }
 
-
-
-
 .model-body{
     background-color: var(--clr-bg);
 }
+
+.models{
+    background-color: yellow;
+}
+.models-list{
+    display: flex;
+  gap: 20px;
+}
+
 .grid-wrapper{
     display: grid;
 }
