--- a/styles.css
+++ b/styles.css
@@ -1141,7 +1141,11 @@ max-width: 50vw;
 
 .card-img{
   max-height: 200px;
-max-width: 300px;
+  max-width: 300px;
+}
+
+.pin-container{
+    background-color: var(--clr-bg);
 }
 
 .model-body{
