--- a/styles.css
+++ b/styles.css
@@ -1144,10 +1144,10 @@ max-width: 50vw;
   max-width: 300px;
 }
 
-.pin-container{
+/* .pin-container{
     background-color: var(--clr-bg);
 }
-
+ */
 .pins{
     background-color: var(--clr-bg);
 }
