--- a/styles.css
+++ b/styles.css
@@ -1145,8 +1145,8 @@ max-width: 50vw;
 /*   border-radius: 17px; */
 }
 
-/* .pin-container{
-    background-color: var(--clr-bg);
+.pin-container{
+   display: grid;
 }
  */
 .pins{
