--- a/styles.css
+++ b/styles.css
@@ -1160,6 +1160,10 @@ max-width: 50vw;
     background-color: var(--clr-bg);
 }
 
+.models-img{
+    padding-right: 10px;
+}
+
 .models{
     background-color: var(--clr-bg);
 }
