--- a/styles.css
+++ b/styles.css
@@ -686,6 +686,7 @@ padding-bottom: 100px;
  .quote{
     margin-top: 130px;
     display: flex;
+    justify-content: center;
  }
 
  .quote-wrapper{
