--- a/styles.css
+++ b/styles.css
@@ -496,7 +496,7 @@ a{
 }
 .about-wrapper2{
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     flex-direction: column;
    
 }
