--- a/styles.css
+++ b/styles.css
@@ -580,6 +580,7 @@ padding-bottom: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 
 .png1{
